[gd_scene load_steps=61 format=3 uid="uid://dfwacdyc6a6eb"]

[ext_resource type="Script" path="res://Player.gd" id="1_cyr1g"]
[ext_resource type="Texture2D" uid="uid://brf2nb6dke6vf" path="res://assets/Individual Sprites/adventurer-air-attack1-00.png" id="2_06s06"]
[ext_resource type="Texture2D" uid="uid://bip5x5ud4pdqy" path="res://assets/Individual Sprites/adventurer-fall-00.png" id="2_fkfni"]
[ext_resource type="Texture2D" uid="uid://u2iigrt8yjgn" path="res://assets/Individual Sprites/adventurer-air-attack1-01.png" id="3_4ale3"]
[ext_resource type="Texture2D" uid="uid://3wngaakc43y6" path="res://assets/Individual Sprites/adventurer-fall-01.png" id="3_f61j6"]
[ext_resource type="Texture2D" uid="uid://dbcbea5axxaqt" path="res://assets/Individual Sprites/adventurer-air-attack1-02.png" id="4_f8b51"]
[ext_resource type="Texture2D" uid="uid://bhs01scp861ah" path="res://assets/Individual Sprites/adventurer-hurt-00.png" id="4_m26f3"]
[ext_resource type="Texture2D" uid="uid://cp3tlhg2y2tpk" path="res://assets/Individual Sprites/adventurer-hurt-01.png" id="5_6kdcn"]
[ext_resource type="Texture2D" uid="uid://cqugwvsdrrenq" path="res://assets/Individual Sprites/adventurer-air-attack1-03.png" id="5_sdn2c"]
[ext_resource type="Texture2D" uid="uid://cqw5648in7lmm" path="res://assets/Individual Sprites/adventurer-air-attack2-00.png" id="6_3m66q"]
[ext_resource type="Texture2D" uid="uid://dl5y6wh10sq1x" path="res://assets/Individual Sprites/adventurer-hurt-02.png" id="6_yxdnk"]
[ext_resource type="Texture2D" uid="uid://dixqp0t8pgqhf" path="res://assets/Individual Sprites/adventurer-air-attack2-01.png" id="7_4bdhg"]
[ext_resource type="Texture2D" uid="uid://b33vdndwqxco1" path="res://assets/Individual Sprites/adventurer-idle-00.png" id="7_qhtr8"]
[ext_resource type="Texture2D" uid="uid://osda64mxgk05" path="res://assets/Individual Sprites/adventurer-idle-01.png" id="8_8dk5g"]
[ext_resource type="Texture2D" uid="uid://7cl0ix2dyt40" path="res://assets/Individual Sprites/adventurer-air-attack2-02.png" id="8_xqbnj"]
[ext_resource type="Texture2D" uid="uid://vile5lilgxgk" path="res://assets/Individual Sprites/adventurer-attack1-00.png" id="9_jfcd7"]
[ext_resource type="Texture2D" uid="uid://dhq7rgfo07c36" path="res://assets/Individual Sprites/adventurer-idle-02.png" id="9_xh87h"]
[ext_resource type="Texture2D" uid="uid://bek42qhih87jl" path="res://assets/Individual Sprites/adventurer-idle-03.png" id="10_ounq2"]
[ext_resource type="Texture2D" uid="uid://dasbfh8gonjau" path="res://assets/Individual Sprites/adventurer-attack1-01.png" id="10_xpk00"]
[ext_resource type="Texture2D" uid="uid://brm0fu437vepb" path="res://assets/Individual Sprites/adventurer-idle-2-00.png" id="11_f3sqc"]
[ext_resource type="Texture2D" uid="uid://l3it1p3depjv" path="res://assets/Individual Sprites/adventurer-attack1-02.png" id="11_q41cm"]
[ext_resource type="Texture2D" uid="uid://b387tolsnrm6w" path="res://assets/Individual Sprites/adventurer-idle-2-01.png" id="12_8nwq5"]
[ext_resource type="Texture2D" uid="uid://dfqqs46hetg6t" path="res://assets/Individual Sprites/adventurer-attack1-03.png" id="12_ama5r"]
[ext_resource type="Texture2D" uid="uid://l2y5fgjkd3ge" path="res://assets/Individual Sprites/adventurer-idle-2-02.png" id="13_06fwj"]
[ext_resource type="Texture2D" uid="uid://ck3x620s5btml" path="res://assets/Individual Sprites/adventurer-attack1-04.png" id="13_xj3j8"]
[ext_resource type="Texture2D" uid="uid://bsdnpk15o8ioj" path="res://assets/Individual Sprites/adventurer-attack2-00.png" id="14_5n85b"]
[ext_resource type="Texture2D" uid="uid://di8vdo5aee8mq" path="res://assets/Individual Sprites/adventurer-idle-2-03.png" id="14_tkh7y"]
[ext_resource type="Texture2D" uid="uid://cl65bbigija1l" path="res://assets/Individual Sprites/adventurer-jump-00.png" id="15_0uuoe"]
[ext_resource type="Texture2D" uid="uid://cj4jtyf36yy44" path="res://assets/Individual Sprites/adventurer-attack2-01.png" id="15_nfbej"]
[ext_resource type="Texture2D" uid="uid://cq1txtryv7304" path="res://assets/Individual Sprites/adventurer-jump-01.png" id="16_voo8h"]
[ext_resource type="Texture2D" uid="uid://bbabqgvvr0b3" path="res://assets/Individual Sprites/adventurer-attack2-02.png" id="16_wxemd"]
[ext_resource type="Texture2D" uid="uid://bvrcl7f6ad3s1" path="res://assets/Individual Sprites/adventurer-attack2-03.png" id="17_3otap"]
[ext_resource type="Texture2D" uid="uid://clp0wcfhqi1wt" path="res://assets/Individual Sprites/adventurer-jump-02.png" id="17_fjc41"]
[ext_resource type="Texture2D" uid="uid://bexit4kxblxew" path="res://assets/Individual Sprites/adventurer-attack2-04.png" id="18_6sjjy"]
[ext_resource type="Texture2D" uid="uid://bjiaepskex1ep" path="res://assets/Individual Sprites/adventurer-jump-03.png" id="18_e1kgn"]
[ext_resource type="Texture2D" uid="uid://1ekcbhnpp4il" path="res://assets/Individual Sprites/adventurer-items-02.png" id="19_2ejcj"]
[ext_resource type="Texture2D" uid="uid://b4by16x17b7l4" path="res://assets/Individual Sprites/adventurer-attack2-05.png" id="19_biy86"]
[ext_resource type="Texture2D" uid="uid://cr0lvfffmc0xs" path="res://assets/Individual Sprites/adventurer-run-01.png" id="19_blhlt"]
[ext_resource type="Texture2D" uid="uid://bd758hsrgtffg" path="res://assets/Individual Sprites/adventurer-items-01.png" id="20_00fkk"]
[ext_resource type="Texture2D" uid="uid://hd2o0n17y1s7" path="res://assets/Individual Sprites/adventurer-run-02.png" id="20_6j3go"]
[ext_resource type="Texture2D" uid="uid://d0wmj80rg42b4" path="res://assets/Individual Sprites/adventurer-items-00.png" id="21_g5wej"]
[ext_resource type="Texture2D" uid="uid://d022cjob7c1bi" path="res://assets/Individual Sprites/adventurer-run-03.png" id="21_ql7g1"]
[ext_resource type="Texture2D" uid="uid://cobn8msm1fi03" path="res://assets/Individual Sprites/adventurer-run-04.png" id="22_plvvh"]
[ext_resource type="Texture2D" uid="uid://u8nccj0kbc0y" path="res://assets/Individual Sprites/adventurer-run-05.png" id="23_btb8w"]
[ext_resource type="Texture2D" uid="uid://v06q3mfkilrh" path="res://assets/Individual Sprites/adventurer-wall-slide-00.png" id="27_qlntx"]
[ext_resource type="Texture2D" uid="uid://obywqakrc00l" path="res://assets/Individual Sprites/adventurer-wall-slide-01.png" id="28_vexal"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8atul"]
size = Vector2(20, 28)

[sub_resource type="SpriteFrames" id="SpriteFrames_i4olk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_06s06")
}, {
"duration": 1.0,
"texture": ExtResource("3_4ale3")
}, {
"duration": 1.0,
"texture": ExtResource("4_f8b51")
}, {
"duration": 1.0,
"texture": ExtResource("5_sdn2c")
}],
"loop": false,
"name": &"air-attack-1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_3m66q")
}, {
"duration": 1.0,
"texture": ExtResource("7_4bdhg")
}, {
"duration": 1.0,
"texture": ExtResource("8_xqbnj")
}],
"loop": false,
"name": &"air-attack-2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_jfcd7")
}, {
"duration": 1.0,
"texture": ExtResource("10_xpk00")
}, {
"duration": 1.0,
"texture": ExtResource("11_q41cm")
}, {
"duration": 1.0,
"texture": ExtResource("12_ama5r")
}, {
"duration": 1.0,
"texture": ExtResource("13_xj3j8")
}],
"loop": false,
"name": &"attack-1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_5n85b")
}, {
"duration": 1.0,
"texture": ExtResource("15_nfbej")
}, {
"duration": 1.0,
"texture": ExtResource("16_wxemd")
}, {
"duration": 1.0,
"texture": ExtResource("17_3otap")
}, {
"duration": 1.0,
"texture": ExtResource("18_6sjjy")
}, {
"duration": 1.0,
"texture": ExtResource("19_biy86")
}],
"loop": false,
"name": &"attack-2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_fkfni")
}, {
"duration": 1.0,
"texture": ExtResource("3_f61j6")
}],
"loop": true,
"name": &"fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_m26f3")
}, {
"duration": 1.0,
"texture": ExtResource("5_6kdcn")
}, {
"duration": 1.0,
"texture": ExtResource("6_yxdnk")
}],
"loop": false,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_qhtr8")
}, {
"duration": 1.0,
"texture": ExtResource("8_8dk5g")
}, {
"duration": 1.0,
"texture": ExtResource("9_xh87h")
}, {
"duration": 1.0,
"texture": ExtResource("10_ounq2")
}],
"loop": true,
"name": &"idle",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_f3sqc")
}, {
"duration": 1.0,
"texture": ExtResource("12_8nwq5")
}, {
"duration": 1.0,
"texture": ExtResource("13_06fwj")
}, {
"duration": 1.0,
"texture": ExtResource("14_tkh7y")
}],
"loop": true,
"name": &"idle-2",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("15_0uuoe")
}, {
"duration": 1.0,
"texture": ExtResource("16_voo8h")
}, {
"duration": 1.0,
"texture": ExtResource("17_fjc41")
}, {
"duration": 1.0,
"texture": ExtResource("18_e1kgn")
}],
"loop": false,
"name": &"jump",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("19_blhlt")
}, {
"duration": 1.0,
"texture": ExtResource("20_6j3go")
}, {
"duration": 1.0,
"texture": ExtResource("21_ql7g1")
}, {
"duration": 1.0,
"texture": ExtResource("22_plvvh")
}, {
"duration": 1.0,
"texture": ExtResource("23_btb8w")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("19_2ejcj")
}, {
"duration": 1.0,
"texture": ExtResource("20_00fkk")
}, {
"duration": 1.0,
"texture": ExtResource("21_g5wej")
}],
"loop": false,
"name": &"throw",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("21_g5wej")
}, {
"duration": 1.0,
"texture": ExtResource("20_00fkk")
}, {
"duration": 1.0,
"texture": ExtResource("19_2ejcj")
}],
"loop": false,
"name": &"use-item",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("27_qlntx")
}, {
"duration": 1.0,
"texture": ExtResource("28_vexal")
}],
"loop": true,
"name": &"wall_slide",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mkqmn"]
size = Vector2(28.8771, 36.4629)

[sub_resource type="Animation" id="Animation_3yjeh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlayerSprite/SwordArea/SwordHitBox:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PlayerBody:shape:size")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(20, 28)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("PlayerBody:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(4, 3)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("PlayerSprite:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(4, 0)]
}

[sub_resource type="Animation" id="Animation_ubw8u"]
resource_name = "air-attack-1"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"air-attack-1"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 1, 2, 3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlayerSprite/SwordArea/SwordHitBox:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PlayerBody:shape:size")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(18, 24.1515), Vector2(21, 24.1515), Vector2(21, 24.1515), Vector2(18, 22.1515)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("PlayerBody:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(3, 3.92423), Vector2(1.5, 3.92423), Vector2(1.5, 3.92423), Vector2(3, 2.92423)]
}

[sub_resource type="Animation" id="Animation_bm0md"]
resource_name = "attack-1"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"attack-1"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlayerSprite/SwordArea/SwordHitBox:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PlayerBody:shape:size")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(18, 21), Vector2(18, 24)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("PlayerBody:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(3, 6.5), Vector2(3, 5)]
}

[sub_resource type="Animation" id="Animation_8l7hs"]
resource_name = "fall"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"fall"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlayerBody:shape:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(11, 23)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PlayerBody:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(7.5, 0.5)]
}

[sub_resource type="Animation" id="Animation_72e1p"]
resource_name = "hurt"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"hurt"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlayerBody:shape:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(15, 23)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PlayerBody:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(4.5, 5.5)]
}

[sub_resource type="Animation" id="Animation_bbufl"]
resource_name = "idle"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlayerSprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(4, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PlayerBody:shape:size")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(16, 28)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("PlayerBody:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(4, 3)]
}

[sub_resource type="Animation" id="Animation_01jh6"]
resource_name = "idle-2"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle-2"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlayerBody:shape:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(16, 26)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PlayerBody:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(4, 4)]
}

[sub_resource type="Animation" id="Animation_6wx8q"]
resource_name = "jump"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"jump"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlayerBody:shape:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(16, 22.652), Vector2(16.8956, 21), Vector2(16.8956, 26.174), Vector2(16.8956, 20)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PlayerBody:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(6, 5.73201), Vector2(5.55221, 6.5), Vector2(6, 2.08701), Vector2(6, -1)]
}

[sub_resource type="Animation" id="Animation_ss6j0"]
resource_name = "run"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"run"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlayerBody:shape:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(15, 26)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PlayerBody:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(7.5, 4)]
}

[sub_resource type="Animation" id="Animation_30tjc"]
resource_name = "wall-slide"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"wall_slide"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlayerBody:shape:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(12, 25)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PlayerBody:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(3, 2.5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2jg7v"]
_data = {
"RESET": SubResource("Animation_3yjeh"),
"air-attack-1": SubResource("Animation_ubw8u"),
"attack-1": SubResource("Animation_bm0md"),
"fall": SubResource("Animation_8l7hs"),
"hurt": SubResource("Animation_72e1p"),
"idle": SubResource("Animation_bbufl"),
"idle-2": SubResource("Animation_01jh6"),
"jump": SubResource("Animation_6wx8q"),
"run": SubResource("Animation_ss6j0"),
"wall-slide": SubResource("Animation_30tjc")
}

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_cyr1g")

[node name="PlayerBody" type="CollisionShape2D" parent="."]
position = Vector2(4, 3)
shape = SubResource("RectangleShape2D_8atul")

[node name="PlayerSprite" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(4, 0)
sprite_frames = SubResource("SpriteFrames_i4olk")
animation = &"idle"

[node name="SwordArea" type="Area2D" parent="PlayerSprite"]

[node name="SwordHitBox" type="CollisionShape2D" parent="PlayerSprite/SwordArea"]
position = Vector2(11.3933, -0.231455)
shape = SubResource("RectangleShape2D_mkqmn")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_2jg7v")
}
